--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,20 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.21.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.1.2</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
