--- a/src/main/resources/config/app.config
+++ b/src/main/resources/config/app.config
@@ -12,3 +12,5 @@ rabbitmq.queue.client=JOBS
 rabbitmq.ip=localhost
 app.max_thread_count=20
 app.controller.port=8080
+rabbitmq.username=hatem
+rabbitmq.password=hatem
