--- a/src/main/resources/config/app.config
+++ b/src/main/resources/config/app.config
@@ -12,3 +12,5 @@ rabbitmq.queue.client=JOBS
 app.max_thread_count=20
 rabbitmq.ip=localhost
 app.controller.port=8080
+cache.jobs.index=0
+job.model.id=jobId
