add delete and post job cache handler config

--- a/src/main/resources/config/commands.config
+++ b/src/main/resources/config/commands.config
@@ -10,5 +10,7 @@ respond.to.applicant=RespondToApplicantsCommand
 job.listing=JobListingCommand
 respond.to.applicant.handler=ArangoSQLJobsHandler
 delete.job.company.handler=ArangoSQLJobsHandler
+delete.job.company.cache.handler=JedisCacheHandler
 post.job.company=JobAsCompany
 post.job.company.handler=ArangoSQLJobsHandler
+post.job.company.cache.handler=JedisCacheHandler
