--- a/src/main/resources/config/app.config
+++ b/src/main/resources/config/app.config
@@ -9,7 +9,7 @@ collection.companies.name=companies
 collection.jobs.name=jobs
 app.controller.host=localhost
 rabbitmq.queue.client=JOBS
-rabbitmq.ip=localhost
+rabbitmq.ip=192.168.43.169
 app.max_thread_count=20
 app.controller.port=8080
 rabbitmq.username=hatem
