--- a/src/main/resources/config/arango.test.config
+++ b/src/main/resources/config/arango.test.config
@@ -1,6 +1,6 @@
 arangodb.user=root
 arangodb.password=
-db.name=Linkedin
+db.name=test
 collection.jobs.name=jobs
 collection.companies.name=companies
 arangodb.host=localhost
