--- a/src/main/resources/config/commands.config
+++ b/src/main/resources/config/commands.config
@@ -6,7 +6,7 @@ company.create.job=CreateJobCommand
 company.create.job.handler=ArangoSQLJobsHandler
 save.job=SaveJobCommand
 save.job.handler=ArangoSQLJobsHandler
-get.saved.jobs=SaveJobCommand
+get.saved.jobs=GetSavedJobCommand
 get.saved.jobs.handler=ArangoSQLJobsHandler
 job.listing=JobListingCommand
 job.listing.handler=ArangoSQLJobsHandler
@@ -14,8 +14,6 @@ delete.job.company=DeleteJobAsCompanyCommand
 delete.job.company.handler=ArangoSQLJobsHandler
 respond.to.applicant=RespondToApplicantsCommand
 respond.to.applicant.handler=ArangoSQLJobsHandler
-post.job.company=JobAsCompanyCommand
-post.job.company.handler=ArangoSQLJobsHandler
 edit.job=EditJobCommand
 edit.job.handler=ArangoSQLJobsHandler
 user.apply.job=UserApplyForJobCommand
