--- a/src/main/resources/config/app.config
+++ b/src/main/resources/config/app.config
@@ -9,8 +9,8 @@ collection.companies.name=companies
 collection.jobs.name=jobs
 app.controller.host=localhost
 rabbitmq.queue.client=JOBS
-rabbitmq.ip=192.168.43.169
+rabbitmq.ip=localhost
 app.max_thread_count=20
 app.controller.port=8080
-rabbitmq.username=hatem
-rabbitmq.password=hatem
+rabbitmq.username=guest
+rabbitmq.password=guest
