RuningService on ashraf machine

--- a/src/main/resources/config/database.config
+++ b/src/main/resources/config/database.config
@@ -1,6 +1,6 @@
 mysql.database-driver=com.mysql.cj.jdbc.Driver
 mysql.url=jdbc:mysql://localhost:3306/linkedin
 mysql.username=root
-mysql.password=
+mysql.password=1234
 arangodb.user=root
-arangodb.password=
+arangodb.password=1234
