--- a/src/main/resources/config/arango.config
+++ b/src/main/resources/config/arango.config
@@ -1,6 +1,6 @@
 arangodb.user=root
-arangodb.password=
-db.name=Linkedin
+arangodb.password=1234
+db.name=linkedin
 collection.jobs.name=jobs
 collection.companies.name=companies
 arangodb.host=localhost
