--- a/src/main/resources/config/database.config
+++ b/src/main/resources/config/database.config
@@ -1,6 +1,6 @@
-mysql.database-driver=com.mysql.cj.jdbc.Driver
-mysql.url=jdbc:mysql://localhost:3306/linkedin
+mysql.driver=com.mysql.jdbc.Driver
 mysql.username=root
 mysql.password=
+mysql.url=jdbc:mysql://localhost/linkedin?useSSL=false
 arangodb.user=root
 arangodb.password=
