bad request in validate company

--- a/src/main/resources/config/arango.config
+++ b/src/main/resources/config/arango.config
@@ -1,7 +1,7 @@
 arangodb.user=root
-arangodb.password=
-db.name=Linkedin
+arangodb.password=root
+db.name=linkedin
 collection.jobs.name=jobs
 collection.companies.name=companies
-arangodb.host=localhost
+arangodb.host=192.168.43.208
 arangodb.port=8529
