--- a/src/main/resources/config/database.config
+++ b/src/main/resources/config/database.config
@@ -3,4 +3,4 @@ mysql.username=root
 mysql.password=
 mysql.url=jdbc:mysql://localhost/linkedin?useSSL=false
 arangodb.user=root
-arangodb.password=
+arangodb.password=root
