--- a/src/main/resources/config/app.config
+++ b/src/main/resources/config/app.config
@@ -9,8 +9,8 @@ collection.companies.name=companies
 collection.jobs.name=jobs
 app.controller.host=localhost
 rabbitmq.queue.client=JOBS
-rabbitmq.ip=localhost
+rabbitmq.ip=192.168.43.50
 app.max_thread_count=20
 app.controller.port=8083
-rabbitmq.username=guest
-rabbitmq.password=guest
+rabbitmq.username=admin
+rabbitmq.password=123456
